syntax = "proto3";
package pqxdh;

import "pqxdh/pb_signed_pqkem_prekey.proto";

message PBSignedOneTimePQKEMPrekeySet {
    repeated pqxdh.PBSignedPQKEMPrekey prekeys = 1;
}